more gitignore things

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,8 @@ ctre_sim/
 
 # build constants, see build.gradle
 src/main/java/frc/robot/BuildConstants.java
+
+networktables.json
+
+simgui-ds.json
+simgui.json
