move BuildConstants to utilities

--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ compileJava.finalizedBy checkAkitInstall
 project.compileJava.dependsOn(createVersionFile)
 gversion {
   srcDir       = "src/main/java/"
-  classPackage = "frc.robot"
+  classPackage = "frc.robot.utilities"
   className    = "BuildConstants"
   dateFormat   = "yyyy-MM-dd HH:mm:ss z"
   timeZone     = "America/Los_Angeles" // Use preferred time zone
